# SecureChat

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.txt  example_json  package.json  vim_session.vim  yslog
contrib/: config.json
docs/: .$system_diagram.drawio.bkp  .$system_diagram.drawio.dtmp  Component_wirefram.drawio  roadmap.md  system_diagram.drawio
include/: copper.h
src/: main.cpp
src/back_end/: http_server.cpp  http_server.hpp
src/back_end/controller/: json_helper.hpp  rest.cpp  rest.hpp  rest_api.cpp  rest_api.hpp  t1.cpp  t1.hpp  websocket.cpp  websocket.hpp
src/event_loop/: event_loop.cpp  event_loop.hpp
src/tox_node/: self_node.cpp  self_node.hpp  tox_callbacks.cpp  tox_callbacks.hpp
uml/: tox_diag.uml
web_front/: package.json  vite.config.js
web_front/src/: App.css  App.jsx  context.js  utils.js
web_front/src/components/: ChatDocuments.jsx  ChatList.jsx  ChatListItem.css  ChatListItem.jsx  ChatMedia.jsx  ChatSideBarContentSelector.jsx  ChatSidebar.jsx  ContactList.jsx  ContactListItem.jsx  Message.css  Message.jsx  MessageContent.jsx  MessageInputBar.jsx  MessageInputEmoji.jsx  MessageInputText.jsx  MessageStream.jsx  MessageText.jsx  MessageTimeDelimiter.jsx  MessagingWindow.jsx  RecipientBar.jsx  RecipientCardInfo.jsx  RecipientIdentification.jsx  RecipientIdentificationItem.jsx  RecipientPropertiesSidebar.jsx  Seenstamp.jsx  SendRequest.jsx  Timestamp.jsx  TopBar.jsx  UserBar.jsx  UserInfoWindow.jsx
